--- a/public/index.html
+++ b/public/index.html
@@ -27,20 +27,14 @@
     -->
     <title>ZKsig</title>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-6K615KMSH5"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-6K615KMSH5");
-    </script>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zksig.so" />
+    <meta property="og:title" content="ZKsig" />
+    <meta
+      property="og:description"
+      content="e-signatures backed by the Solana blockchain"
+    />
+    <meta property="og:image" content="https://zksig.so/logo.png" />
   </head>
   <body class="w-full bg-slate-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
