--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/minimal.jpg" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,7 @@
       name="description"
       content="e-signatures backed by the Solana blockchain"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/minimal.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,7 +34,7 @@
       property="og:description"
       content="e-signatures backed by the Solana blockchain"
     />
-    <meta property="og:image" content="https://zksig.so/logo.png" />
+    <meta property="og:image" content="https://zksig.so/logo_v2.jpg" />
   </head>
   <body class="w-full bg-slate-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
