--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="e-signatures backed by the Solana blockchain"
+      content="Decentralized legally binding agreements."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/minimal.jpg" />
     <!--
@@ -32,7 +32,7 @@
     <meta property="og:title" content="ZKsig" />
     <meta
       property="og:description"
-      content="e-signatures backed by the Solana blockchain"
+      content="Decentralized legally binding agreements."
     />
     <meta property="og:image" content="https://zksig.so/logo_v2.jpg" />
   </head>
